@@ -1,3 +1,7 @@
+2008-10-20 Chris Allegretta <chrisa@asty.org>
+	* files.c (do_writeout): Add check for file modification when saving
+	  the file so the user can at least know they may be blowing away changes.
+
 2008-10-14 Chris Allegretta <chrisa@asty.org>
 	* nanorc.5: Fix redo man page entry and update explanation, reported by
 	  Eitan Adler <eitanadlerlist@gmail.com>
